@@ -1,3 +1,4 @@
+26 Jul 2003 Minor change to codepage conversion logic - Jan Jaeger
 21 Jul 2003 CVD fix by Viktor Shkamerda - Jan Jaeger
 20 Jul 2003 Defer tuntap32 dll load to device alloc - Jan Jaeger
 19 Jul 2003 THDER,THDR instructions - Roger Bowler
